# grib2dec

./: CMakeLists.txt  INSTALL.txt  LICENSE  README.md
apps/: CMakeLists.txt  grib2dec.cpp  regatta.cpp
apps/output/: output.cpp  output.hpp  svg.cpp  svg.hpp  txt.cpp  txt.hpp
include/grib2dec/: grib2dec.h  grib2dec.hpp  types.h
include/regatta/: regatta.h
src/: CMakeLists.txt  data.cpp  data.hpp  decoder.cpp  decoder.hpp  grib2dec.cpp  read_grib2.cpp  read_grib2.hpp  sections.cpp  sections.hpp  stream.hpp  struct.hpp  utils.hpp
